--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+	    <meta name="google-site-verification" content="Vrw5KneQpaJAqtDfg6Slsnllvvr-bjL7M22df9Incss" />
         <script type="application/ld+json">
     {
         "@context" : "http://schema.org",
